# seastar_project

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  Compute_nrcs testbed.ipynb  Issue #224.ipynb  Issue #264.ipynb  Issue 221.ipynb  L1b processing.ipynb  L1c processing.ipynb  L2 noise effect comparison.ipynb  OSCAR Calibration.ipynb  OSCAR_L1_L2_processing_v1.ipynb  OSCAR_Ushant_L1b.ipynb  OSCAR_processing_testbed_v1.ipynb  OSCAR_processing_v1.1.ipynb  OSCAR_processing_v2.1.ipynb  OSCAR_star_pattern_L1b.ipynb  OSCAR_star_pattern_v1-adrien.ipynb  OSCAR_validation.ipynb  Par_test_for_Daria.ipynb  Phase_bias_correction_v1.ipynb  README.md  SEASTARex paper.ipynb  SciReC_Feb_2023_perf.ipynb  Star Pattern Analysis.ipynb  Unit_test_for_ESA.ipynb  Untitled.ipynb  _logger.py  _version.py  config.ini  config_LIVPC141.ini  master_processor.py  minimum_SciReC_Feb_2023.ipynb  plot_mouche12.ipynb  plot_nscat4ds.ipynb  plot_yurovsky19.ipynb  pyproject.toml  requirements.txt  seastarx_config.ini  (+7 more)
config/: 202204_Ned_TrackNames.ini  202205_IroiseSea_TrackNames.ini  202305_MedSea_TrackNames.ini  Campaign_name_lookup.ini  OSCAR_config.ini
docs/: .readthedocs.yaml  code.rst  conf.py  extra.rst  getting_started.rst  index.rst  modules.rst  readthedocs.yaml  requirements.txt  seastar.examples.rst  seastar.gmfs.rst  seastar.processing.rst  seastar.retrieval.rst  seastar.rst  seastar.utils.rst
env/: environment.yml
examples/: example_functions.py  example_readers.py
gmfs/: doppler.py
processing/: adriens_fuctions.py  clives_functions.py  daves_functions.py  example_function.py  example_functions.py
scripts/: parallel_test.py
seastar/: OSCAR_processing_testbed_v1.ipynb  Oscar_processing_testbed.ipynb  __init__.py  tools.py
test_data/: 20220522T0539-0543_OSCAR_L1C_Track_1_Grd500x500m_Eff500x500m_2025.06.2.nc  20220522T0547-0551_OSCAR_L1C_Track_2_Grd500x500m_Eff500x500m_2025.06.2.nc  20220522T0554-0558_OSCAR_L1C_Track_1b_Grd500x500m_Eff500x500m_2025.06.2.nc  20220522T0620-0623_OSCAR_L1C_Track_11_Grd500x500m_Eff500x500m_2025.06.2.nc  (+9 more)
utils/: readers.py  tools.py
(+122 files in other folders)
