[tool.poetry]
name = 'seastar'
description = 'seastar package'
authors = ["Adrien Martin <adrien.martin@noveltis.fr>"]
version = '1.0'
readme = "README.md"

[tool.poetry.dependencies]
python = "*"                              # Python
matplotlib = "*"                          # Matplotlib
netcdf4 = "*"                             # NetCDF4
numpy = "*"                               # NumPy
scipy = "*"                               # SciPy
packaging = "*"                           # Packaging
pip = "*"                                 # Pip
sphinx = "*"                              # Sphinx
sphinx_rtd_theme = "*"                    # Sphinx RTD Theme
xarray = "*"                              # Xarray
utm = "*"                                 # UTM
pytest = "*"                              # Test librairy
dask = "*"                                # Dask

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"